A-CodeQuality
Major Code Quality changes in branch-CleanCode in iP Week 5

Minor Code Quality changes:

* Refactored Code into smaller functions

* Use Descriptive variable names which follow coding standards

Fix Bug in Cheer Command:

* Add Default Cheers if CheerFile is empty/does not exist