@@ -6,10 +6,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 
-import duck.exception.DuckException;
 import duck.exception.StorageException;
 
 /**
@@ -42,28 +42,35 @@ public class Storage {
     }
 
     /**
+     * Helper function to check and create files / folders
+     *
+     * @param filepath File/folder to be checked / created
+     * @param isDirectory True if folder to be created, false if file to be created
+     * @throws StorageException Error while creating File
+     */
+    private void checkAndCreateFileFolder(Path filepath, boolean isDirectory) throws StorageException {
+        boolean fileExists = Files.exists(filepath);
+        if (!fileExists) {
+            // directory/file does not exist -- create folder/file
+            try {
+                if (isDirectory) {
+                    Files.createDirectories(filepath);
+                } else {
+                    Files.createFile(filepath);
+                }
+            } catch (IOException fileError) {
+                throw new StorageException("Unable to create directory/file: " + fileError.getMessage());
+            }
+        }
+    }
+
+    /**
      * Check if directory and file exists. If not, create empty directory and file.
      */
     public void onStartup() throws StorageException {
-        // check if file exists
-        boolean directoryExists = Files.exists(this.folderPath);
-        if (!directoryExists) {
-            // directory does not exist -- create folder
-            try {
-                Files.createDirectories(this.folderPath);
-            } catch (IOException folderError) {
-                throw new StorageException("Unable to create directory: " + folderError.getMessage());
-            }
-        }
-        boolean fileExists = Files.exists(this.filePath);
-        if (!fileExists) {
-            // file does not exist -- create file
-            try {
-                Files.createFile((this.filePath));
-            } catch (IOException fileError) {
-                throw new StorageException("Unable to create file: " + fileError.getMessage());
-            }
-        }
+        checkAndCreateFileFolder(this.folderPath, true);
+        checkAndCreateFileFolder(this.filePath, false);
+        checkAndCreateFileFolder(this.filePathCheer, false);
     }
 
     /**
@@ -76,7 +83,6 @@ public class Storage {
             throw new StorageException("No Existing Task Data");
         }
     }
-
 
     /**
      * Add new task entry to hard disk.
@@ -103,11 +109,7 @@ public class Storage {
         try {
             List<String> lines = Files.readAllLines(this.filePath);
             lines.remove(lineNumber);
-            String totalStr = "";
-            for (String line: lines) {
-                totalStr = totalStr + line + '\n';
-            }
-            Files.writeString(this.filePath, totalStr); // Overwrites by default
+            Files.write(this.filePath, lines);
         } catch (IOException deleteError) {
             System.out.println("Unable to delete from file: " + deleteError.getMessage());
         }
@@ -120,37 +122,38 @@ public class Storage {
      * @param lineNumber Row number where task will be marked as done/undone.
      * @param editedEntry New data to replace existing data.
      */
-    public void editFile(int lineNumber, String editedEntry) {
+    public void editFile(int lineNumber, String editedEntry) throws StorageException {
         try {
             List<String> lines = Files.readAllLines(this.filePath);
             lines.set(lineNumber, editedEntry);
-            String totalStr = "";
-            for (String line: lines) {
-                totalStr = totalStr + line + '\n';
-            }
-            Files.writeString(this.filePath, totalStr);
+            Files.write(this.filePath, lines);
         } catch (IOException editError) {
-            System.out.println("Unable to edit file: " + editError.getMessage());
+            throw new StorageException("Unable to edit file: " + editError.getMessage());
         }
+    }
+
+    private void addToCheerFile() throws IOException {
+        List<String> cheers = new ArrayList<>();
+        cheers.add("“ Those who can imagine anything, can create the impossible.” - Alan Turing");
+        cheers.add("“ Logic will get you from A to Z; imagination will get you everywhere.” - Albert Einstein");
+        cheers.add("“ Anyone who has never made a mistake has never tried anything new.” - Albert Einstein");
+        cheers.add("“ Any sufficiently advanced technology is equivalent to magic.” - Arthur C. Clarke");
+        Files.write(this.filePathCheer, cheers, StandardOpenOption.APPEND);
     }
 
     /**
      * Randomly selects motivational quote from cheer.txt.
      *
      * @return String --> the motivational quote
-     * @throws DuckException error if cheer.txt is empty.
      * @throws IOException error if unable to open cheer.txt.
      */
-    public String cheer() throws DuckException, IOException {
+    public String cheer() throws IOException {
         Random rand = new Random();
         if (Files.size(this.filePathCheer) == 0) {
-            throw new DuckException("Error! Cheer File is Empty");
-        } else {
-            List<String> lines = Files.readAllLines(this.filePathCheer);
-            int randomBoundedInt = rand.nextInt(lines.size());
-            return lines.get(randomBoundedInt);
+            addToCheerFile();
         }
-
+        List<String> lines = Files.readAllLines(this.filePathCheer);
+        int randomBoundedInt = rand.nextInt(lines.size());
+        return lines.get(randomBoundedInt);
     }
-
 }
